--- a/src/plugins/Maya/Maya_Material2009.vcxproj
+++ b/src/plugins/Maya/Maya_Material2009.vcxproj
@@ -59,19 +59,19 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(xrPlugBinDir)Maya2009</OutDir>
+    <OutDir>$(xrPlugBinDir)Maya2009\</OutDir>
     <TargetName>XRayMaterial</TargetName>
     <TargetExt>.mll</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(xrPlugBinDir)Maya2009</OutDir>
+    <OutDir>$(xrPlugBinDir)Maya2009\</OutDir>
     <TargetName>XRayMaterial</TargetName>
     <TargetExt>.mll</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Mixed|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(xrPlugBinDir)Maya2009</OutDir>
+    <OutDir>$(xrPlugBinDir)Maya2009\</OutDir>
     <TargetName>XRayMaterial</TargetName>
     <TargetExt>.mll</TargetExt>
   </PropertyGroup>
