--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "src/Externals/GameSpy"]
 	path = src/Externals/GameSpy
 	url = git@github.com:nitrocaster/GameSpy.git
+[submodule "src/Externals/AGS_SDK"]
+	path = src/Externals/AGS_SDK
+	url = git@github.com:GPUOpen-LibrariesAndSDKs/AGS_SDK.git
